<resources>
    <string name="app_name">OnlineShopApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name">Input last name</string>
    <string name="email">Input email</string>
    <string name="register">REGISTER</string>
    <string name="registration">Registration</string>
    <string name="first_name">Input first name</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>

    <string name="about_text">Group: 951006\n\nStudent: Sementsova Kristina\n\nLab2: Online Shop</string>
    <string name="about_programmer_title">ABOUT PROGRAMMER</string>
    <string name="favorites_page">Favorites</string>
    <string name="redirect_to_source">Look at the source</string>
    <string name="select_avatar">Select an avatar</string>
    <string name="catalog_page">Catalog</string>
    <string name="search_page">Search</string>
    <string name="add_note">Add a note about product</string>
    <string name="update">Update</string>
    <string name="currency">Currency</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="usd">USD</string>
    <string name="euro">EUR</string>
    <string name="rub">RUB</string>
    <string name="converter">Converter</string>
    <string name="converter_title">Exchange rate today</string>
    <string name="profile_image">Profile image</string>
    <string name="application_settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_mode">Change Mode</string>
    <string name="save">Save</string>

</resources>